<resources>
    <string name="app_name">My Application</string>

    <string name="Preload_1">Active Productivity</string>
    <string name="Preload_2">Notes and tasks in one place</string>

    <string name="Login_1">Welcome</string>
    <string name="Login_2">It is a pleasure to have you in our application</string>
    <string name="Login_3">Mail</string>
    <string name="Login_4">Password</string>
    <string name="Login_5">Accept all privacy policies</string>
    <string name="Login_6">Do not you remember your password?</string>
    <string name="Login_7">log in</string>
    <string name="Login_8">Create Account</string>
    <string name="Login_9">Everything at your fingertips</string>
    <string name="Login_10">Activity Productivity by Jajomofra v1.0</string>

    <string name="CreateAccount_1">Hi!</string>
    <string name="CreateAccount_2">Create a new account</string>
    <string name="CreateAccount_3">Mail</string>
    <string name="CreateAccount_4">Password</string>
    <string name="CreateAccount_5">Accept all privacy policies</string>
    <string name="CreateAccount_6">Next</string>

    <string name="UserData_1">Ready for the experience</string>
    <string name="UserData_2">We want to know more about you</string>
    <string name="UserData_3">Name</string>
    <string name="UserData_4">Last name</string>
    <string name="UserData_5">Phone</string>
    <string name="UserData_6">Lets go</string>

    <string name="VMCategories_1">Categories</string>



</resources>