<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewModel.Login.Login">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49" />

    <TextView
        android:id="@+id/Login_text_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Login_1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Login_text_2"
        app:layout_constraintStart_toStartOf="@+id/Login_text_2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Login_2"
        app:layout_constraintEnd_toEndOf="@+id/Login_text_1"
        app:layout_constraintStart_toStartOf="@+id/Login_text_1"
        app:layout_constraintTop_toBottomOf="@+id/Login_text_1" />

    <TextView
        android:id="@+id/Login_text_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/Login_3"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Login_edit_text_1"
        app:layout_constraintEnd_toEndOf="@+id/Login_edit_text_1"
        app:layout_constraintStart_toStartOf="@+id/Login_edit_text_1" />

    <EditText
        android:id="@+id/Login_edit_text_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/Trasparente"
        android:ems="10"
        android:foreground="@drawable/edit_text_theme1_c1"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Login_text_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/Login_4"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Login_edit_text_2"
        app:layout_constraintEnd_toEndOf="@+id/Login_edit_text_2"
        app:layout_constraintStart_toStartOf="@+id/Login_edit_text_2" />

    <EditText
        android:id="@+id/Login_edit_text_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/Trasparente"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:foreground="@drawable/edit_text_theme1_c1"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/Login_edit_text_1"
        app:layout_constraintStart_toStartOf="@+id/Login_edit_text_1"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <CheckBox
        android:id="@+id/Login_checbox_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Login_5"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Login_edit_text_2"
        app:layout_constraintStart_toStartOf="@+id/Login_edit_text_2"
        app:layout_constraintTop_toBottomOf="@+id/Login_edit_text_2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Login_6"
        android:textColor="@color/Theme_color_2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/Login_checbox_1"
        app:layout_constraintStart_toStartOf="@+id/Login_checbox_1"
        app:layout_constraintTop_toBottomOf="@+id/Login_checbox_1" />

    <Button
        android:id="@+id/Login_button_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_theme1_c1"
        android:text="@string/Login_7"
        android:textColor="@color/Theme_color_text"
        app:layout_constraintBottom_toTopOf="@+id/Login_button_2"
        app:layout_constraintEnd_toEndOf="@+id/Login_edit_text_2"
        app:layout_constraintStart_toStartOf="@+id/Login_edit_text_2" />

    <Button
        android:id="@+id/Login_button_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_theme1_c1"
        android:text="@string/Login_8"
        android:textColor="@color/Theme_color_text"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/Login_edit_text_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Login_edit_text_2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/Login_9"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/Login_button_2"
        app:layout_constraintStart_toStartOf="@+id/Login_button_2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/Login_10"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Login_button_2"
        app:layout_constraintStart_toStartOf="@+id/Login_button_2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/Login_text_2"
        app:layout_constraintEnd_toEndOf="@+id/Login_edit_text_1"
        app:layout_constraintStart_toStartOf="@+id/Login_edit_text_1"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/reading_glasses_rafiki" />

</androidx.constraintlayout.widget.ConstraintLayout>